JumpScript/tests/baselines/reference/parserMemberAccessorDeclaration15.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration15.jump(2,12): error TS2369: A parameter property is only allowed in a constructor implementation.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration15.jump (1 errors) ====
    class C {
       set Foo(public a: number) { }
               ~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }